<resources>
    <string name="app_name">android project</string>
    <string name="tv_Email" />
    <string name="hint_email">ENTER YOUR EMAIL</string>
    <string name="tb_email">email</string>
    <string name="tb_email2" />
    <string name="tb_password">passwrod</string>
    <string name="tv_pass" />
    <string name="hint_pass">ENTER YOUR PASSWORD</string>
    <string name="hintEmail">ENTER YOUR EMAIL</string>
    <string name="tb_passwordd" />
    <string name="bt_login">Log in</string>
    <string name="bt_log_in">Login</string>
    <string name="tv_signup">Don\'t have account</string>
    <string name="tv_regester">Sign Up</string>
    <string name="signUp2">Don\'t have an account?</string>
    <string name="tv_signinwithgoogle">You Can Use</string>
    <string name="btn_guest">Guest</string>
    <string name="tv_regestration">Regestration Page</string>
    <string name="tb_userName">username</string>
    <string name="hint_username">ENTER YOUR USER NAME</string>
    <string name="tb_confirm_pass" />
    <string name="hint_confrm_pass">CONFIRM YOUR PASSWORD</string>
    <string name="tv_registration">Registration</string>
    <string name="tv_Registarion">Registration Page</string>
    <string name="bt_signup">signup</string>
    <string name="btn_sign_up">Signup</string>
    <string name="tv_login">Login Page</string>
</resources>