<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login4"


    tools:context=".login.loginview.LoginScreen">

    <EditText
        android:id="@+id/tb_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="12dp"

        android:textAllCaps="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_userName" />

    <EditText
        android:id="@+id/tb_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tb_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tb_email"
        app:layout_constraintTop_toBottomOf="@+id/tb_email" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="casual"
        android:text="@string/tv_Registarion"
        android:textColor="#FFBF00"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tb_userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tb_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tb_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tb_email"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/tb_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/hint_confrm_pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tb_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tb_password"
        app:layout_constraintTop_toBottomOf="@+id/tb_password" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFBF00"
        android:text="@string/btn_sign_up"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_confirm_password" />


</androidx.constraintlayout.widget.ConstraintLayout>