<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login4"


    tools:context=".login.loginview.LoginScreen">

    <EditText
        android:id="@+id/tb_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:textAllCaps="true"


        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/tb_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_background"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tb_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tb_email"
        app:layout_constraintTop_toBottomOf="@+id/tb_email" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFBF00"
        android:textStyle="bold"
        android:text="@string/bt_log_in"
        android:textAllCaps="false"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_password" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signUp2"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />

    <TextView
        android:id="@+id/tv_regester"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_regester"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/tv_signup"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />

    <View
        android:layout_width="62dp"
        android:layout_height="1dp"
        android:layout_marginBottom="48dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/tv_regester"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_regester" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginStart="261dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="92dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_regester" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_signinwithgoogle"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageView
            android:id="@+id/img_google"
            android:layout_width="57dp"
            android:layout_height="55dp"
            app:srcCompat="@drawable/unnamed" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="120dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageView
            android:id="@+id/img_facebook"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:srcCompat="@drawable/icon5" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_guest"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFBF00"
        android:textStyle="bold"
        android:text="@string/btn_guest"
        android:textAllCaps="false"
        app:cornerRadius="50dp"
        app:layout_constraintStart_toStartOf="@+id/bt_login"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="226dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/tv_login"
        android:textColor="#FFBF00"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tb_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>